@@ -15,15 +15,6 @@ name npg_qc_viewer
 <Model NpgDB>
 </Model>
 
-<Controller AjaxProxy>
-    remote_sites  npg.sanger.ac.uk
-    remote_sites  npg.dev.sanger.ac.uk
-    remote_sites  psd-support.internal.sanger.ac.uk
-    remote_sites  dev.psd.sanger.ac.uk
-    protocols     [ http ]
-</Controller>
-
-
 <Plugin::AutoCRUD>
    <sites>
        <admin>
