@@ -1,62 +1,0 @@
-# configuration file for npg_qc-viewer Catalyst application
-name npg_qc_viewer
-dev  ""
-<Model Check>
-    use_db    0
-    <connect_info>
-        dsn      dbi:SQLite:t/data/npgqc.db
-        user     npgro
-        password ""
-    </connect_info>
-</Model>
-
-<Model WarehouseDB>
-    <connect_info>
-        dsn      dbi:SQLite:t/data/warehouse.db
-        user     ""
-        password ""
-    </connect_info>
-</Model>
-
-<Model NpgDB>
-    <connect_info>
-        dsn      dbi:SQLite:t/data/npg.db
-        user     npgro
-        password ""
-    </connect_info>
-</Model>
-<Model NpgQcDB>
-    <connect_info>
-        dsn      dbi:SQLite:t/data/npgqc.db
-        user     npgro
-        password ""
-    </connect_info>
-</Model>
-
-<Plugin::Authentication>
-  default_realm = test_realm
-  <realms>
-    <test_realm>
-      <credential>
-        class = Testing
-        password_field  = password
-        global_password = secret
-      </credential>
-      <store>
-        class = Minimal
-        <users>
-          <dog>
-            roles = [ admin ]
-          </dog>
-          <cat>
-            roles = annotator
-            roles = admin
-          </cat>
-          <tiger>
-            roles = [ enduser ]
-          </tiger>
-        </users>
-      </store>
-    </test_realm>
-  </realms>
-</Plugin::Authentication>
