@@ -2,6 +2,8 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
 
  - SeqQC build: remove --linkable-bcviz-path option since dependency on bcviz
    is now managed by bower
+ - SeqQC: Ajax controller removed (was used as a proxy for now discontinued
+   requests to LIMs web server)
 
 release 57.8.1
  - add temporary file name option to bamtofastq command
